--- a/src/components/CadOne/CadOne.css
+++ b/src/components/CadOne/CadOne.css
@@ -49,9 +49,9 @@ input[type=text]{
     .pokeimg{
         max-width:5%;
     }
-    .nametitle{
-        font-size: 15px;
-        margin-top: -80px;
+    .namet{
+        font-size: 18px;
+        margin-top: -20px;
     }
     .button{
         width: 250px;
@@ -64,7 +64,7 @@ input[type=text]{
     .pokeimg{
         max-width: 20%;
     }
-    .nametitle{
+    .namet{
         font-size: 30px;
         margin-top: -50px;
     }
