--- a/src/components/CadTwo/CadTwo.css
+++ b/src/components/CadTwo/CadTwo.css
@@ -52,9 +52,14 @@ input[type=text]{
     .pokeimg{
         max-width:5%;
     }
-    .nametitle{
+    .nametitletwo{
         font-size: 15px;
         margin-top: -80px;
+    }
+    .subtitle{
+        color: white;
+        font-size: 15px;
+        margin-top: -10px;
     }
     .button{
         width: 250px;
@@ -67,7 +72,7 @@ input[type=text]{
     .pokeimg{
         max-width: 20%;
     }
-    .nametitle{
+    .nametitletwo{
         font-size: 30px;
     }
   }
