--- a/src/components/Pages/Home.css
+++ b/src/components/Pages/Home.css
@@ -17,8 +17,7 @@
   }
   .type:hover{
     background-color: transparent;
-    width: 55px;
-    height: 55px;
+    transform: scale(1.3);
     -webkit-filter: drop-shadow(0px 0px 20px rgba(0 0 0 / 90%)); 
         filter: drop-shadow(0px 0px 20px rgba(0 0 0 / 90%));
   }
