--- a/src/components/Pages/Home.css
+++ b/src/components/Pages/Home.css
@@ -21,6 +21,9 @@
     -webkit-filter: drop-shadow(0px 0px 20px rgba(0 0 0 / 90%)); 
         filter: drop-shadow(0px 0px 20px rgba(0 0 0 / 90%));
   }
+  .type:active{
+    filter: brightness(1)
+  }
   @media only screen and (max-width: 900px) {
     .nametitle{
       margin-top: 20px;
